# multi-retrieval

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 技术文档-多路召回框架设计.md
examples/: usage.py
retrieval/: __init__.py  bm25_retriever.py  reranker.py  shard_retriever.py  unified_retriever.py  vector_retriever.py
